# occ_package_test

./: .pyproject.toml.swp  LICENSE  README.md  pyproject.toml
src/occ/: spatial.py
src/occ_climate.egg-info/: PKG-INFO  SOURCES.txt
src/spatial/: .ls.swp
