[project]

name = "OCC_spatial"
version = "0.0.1"
authors = [
  { { name="Jerry Liu", email="write874260@gmail.com" },{name= "Dr. Rebecca Beadling", email= "rebecca.beadling@temple.edu"}
]
description = "function of Ocean Climate Connections (OCC) Research Group at Temple University!"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/occ-research/occ_package_test.git"
Issues = "https://github.com/occ-research/occ_package_test.git/issues"

